--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-maps-react": "^1.1.2",
     "lodash": "^4.17.4",
     "massive": "^4.5.0",
+    "moment": "^2.20.1",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
     "react": "^16.2.0",
