--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
     "react": "^16.2.0",
+    "react-collapsible": "^2.0.3",
+    "react-dates": "^16.0.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
