--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "geocodio": "^2.0.0",
     "google-maps-react": "^1.1.2",
     "lodash": "^4.17.4",
     "massive": "^4.5.0",
