--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.15.6",
     "geocodio": "^2.0.0",
     "google-maps-react": "^1.1.2",
+    "localforage": "^1.5.5",
     "lodash": "^4.17.4",
     "massive": "^4.5.0",
     "moment": "^2.20.1",
@@ -28,6 +29,7 @@
     "react-scroll": "^1.7.4",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-persist": "^5.4.0",
     "redux-promise-middleware": "^5.0.0"
   },
   "scripts": {
