--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+  "jest": "^21.1.0"
+},
   "proxy": "http://localhost:3001"
 }
